# fractals

./: README.md
mandelbrot/cpp/: CMakeLists.txt  asciiResult.txt  build.sh  mandelbrot.cpp  mandelbrot.h  performance.txt  testmandelbrot.cpp
mandelbrot/cpp/docker/: Dockerfile  Readme.md
mandelbrot/cpp/exe/: CMakeLists.txt  mandelbrot_main.cpp
mandelbrot/cpp/lib/: CMakeLists.txt  build_wasm.sh  emmain.cpp  index.html  mandelbrot.cpp  mandelbrot.h  rgb.cpp  rgb.h  wasm_driver.cpp
mandelbrot/cpp/test/: CMakeLists.txt  testMain.cpp  testmandelbrot.cpp  testrgb.cpp
mandelbrot/cpp/wasm/: build_wasm.sh  emmain.cpp  index.html  wasm_driver.cpp
mandelbrot/go/: go.mod  main.go
mandelbrot/go/mandelbrot/: mandelbrot.go
mandelbrot/go/mandelbrot_lib/: color.go  mandelbrot.go  non_pipeline.go  pipeline.go
mandelbrot/go/test/: benchmark_test.go  color_test.go  mandelbrot_test.go
